--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -38,7 +38,7 @@ const { title } = Astro.props;
 	}
 	html {
 		font-family: "Poppins", sans-serif;
-		background: #13151a;
+		background: transparent;
 		color: var(--text-default);
 	}
 
